Update sales and pics

--- a/puppies.html
+++ b/puppies.html
@@ -49,42 +49,34 @@
         <section class="features  bg-primary py-3">
             <div class="container p-5">
                 <h1 class="xl">Puppies Available NOW:</h1>
-                <p class="lead"> Nov 1st: We have 3 girls and 3 Boys available from Aurora's litter. Text us for updated info and pictures. We four male chocolates availabe, pictured on home page, and one fluffy carrier blue merle seen below.</p>
+                <p class="lead"> Nov 11st: Well a week later all three boys have sold,leaving 3 girls available from Aurora's litter. Text us for updated info and pictures. We four male chocolates availabe, pictured on home page, and one fluffy carrier blue merle seen below.</p>
             </div>
             <div class="container grid">
                 <div class="card puppy">
                     <h1>blue and tan girl 1
-                    </h1><img src="images/puppies/sum22/female 1/messages_0-28.jpeg" alt="blue french bulldog">
-                    <img src="images/puppies/sum22/female 1/messages_0-29.jpeg" alt="blue french bulldog">
-                    <img src="images/puppies/sum22/female 1/messages_0-30.jpeg" alt="blue french bulldog">
+                    </h1>
                     <img src="images/puppies/sum22/female 1/messages_0-31.jpeg" alt="blue french bulldog">
                 </div>
                 <div class="card puppy">
                     <h1>blue and tan girl 2
-                    </h1><img src="images/puppies/sum22/female 2/messages_0-28.jpeg" alt="blue french bulldog">
-                    <img src="images/puppies/sum22/female 2/messages_0-29.jpeg" alt="blue french bulldog">
-                    <img src="images/puppies/sum22/female 2/messages_0-30.jpeg" alt="blue french bulldog">
+                    </h1>
                     <img src="images/puppies/sum22/female 2/messages_0-31.jpeg" alt="blue french bulldog">
                     
                 </div>
                 <div class="card puppy">
                     <h1>blue and tan boy 1
-                    </h1><img src="images/puppies/sum22/male 1/messages_0-28.jpeg" alt="blue french bulldog">
-                    <img src="images/puppies/sum22/male 1/messages_0-29.jpeg" alt="blue french bulldog">
-                    <img src="images/puppies/sum22/male 1/messages_0-30.jpeg" alt="blue french bulldog">
-                    <img src="images/puppies/sum22/male 1/messages_0-31.jpeg" alt="blue french bulldog">
+                    </h1><img src="images/puppies/sum22/male 1/messages_0-28.jpeg" alt="blue french bulldog"><div class="sold">SOLD</div>
+                    Headed to Chicago, IL
                 </div>
                 <div class="card puppy"><h1>blue and tan boy 2
                 </h1><img src="images/puppies/sum22/male 2/messages_0-28.jpeg" alt="blue french bulldog">
-                <img src="images/puppies/sum22/male 2/messages_0-29.jpeg" alt="blue french bulldog">
-                <img src="images/puppies/sum22/male 2/messages_0-30.jpeg" alt="blue french bulldog">
-                <img src="images/puppies/sum22/male 2/messages_0-31.jpeg" alt="blue french bulldog">
+                <div class="sold">SOLD</div>
+                Headed to Salt Lake City, UT
                 </div>
                 <div class="card puppy"><h1>blue fawn boy 3
                 </h1><img src="images/puppies/sum22/male 3/messages_0-28.jpeg" alt="blue french bulldog">
-                <img src="images/puppies/sum22/male 3/messages_0-29.jpeg" alt="blue french bulldog">
-                <img src="images/puppies/sum22/male 3/messages_0-30.jpeg" alt="blue french bulldog">
-                <img src="images/puppies/sum22/male 3/messages_0-31.jpeg" alt="blue french bulldog">
+                <div class="sold">SOLD</div>
+                Headed to Providence, RI
                     
                 </div>
                 <div class="card puppy"><h1>Momma</h1><img src="images/mamas/aurora.jpg" alt="blue fawn french bulldog">
@@ -103,8 +95,8 @@
         <section class="cloud bg-primary py-2">
             <div class="container grid">
                 <div class="text-center">
-                    <h2 class="lg">One Merle Flully Carrier Boy Available! </h2>
-                    <p class="lead my-1">The blue merle is still available, carries cream and a
+                    <h2 class="lg">Both Merle Flully Carrier Boys have SOLD ! </h2>
+                    <p class="lead my-1">The blue merle is no longer available, carries cream and a
                         fluffy gene. His coat is super soft due to his fluffy gene, and he is so sweet. We are motivated to find them a forever home.</p>
                 </div>
                 <img src="images/puppies/merle/blue1.jpg" alt="fluffy-carrier merle">
