Update puppy page

--- a/puppies.html
+++ b/puppies.html
@@ -55,28 +55,35 @@
                 <div class="card puppy">
                     <h1>blue and tan girl 1
                     </h1>
-                    <img src="images/puppies/sum22/female 1/messages_0-31.jpeg" alt="blue french bulldog">
+                    <img src="images/puppies/sum22/bluentan-1.jpg" alt="blue and tan french bulldog">
+                    <img src="images/puppies/sum22/bluentan-6.jpg" alt="blue and tan french bulldog">
                 </div>
                 <div class="card puppy">
                     <h1>blue and tan girl 2
                     </h1>
-                    <img src="images/puppies/sum22/female 2/messages_0-31.jpeg" alt="blue french bulldog">
-                    
+                    <img src="images/puppies/sum22/bluentan-2.jpg" alt="blue and tan french bulldog">
+                    <img src="images/puppies/sum22/bluentan-4.jpg" alt="blue and tan french bulldog">
+                </div>
+                <div class="card puppy">
+                    <h1>blue and tan girl 3
+                    </h1>
+                    <img src="images/puppies/sum22/bluentan-3.jpg" alt="blue and tan french bulldog"><div class="sold">SOLD</div>
+                    Headed to Miami, FL
                 </div>
                 <div class="card puppy">
                     <h1>blue and tan boy 1
                     </h1><img src="images/puppies/sum22/male 1/messages_0-28.jpeg" alt="blue french bulldog"><div class="sold">SOLD</div>
-                    Headed to Chicago, IL
+                    Chicago, IL
                 </div>
                 <div class="card puppy"><h1>blue and tan boy 2
                 </h1><img src="images/puppies/sum22/male 2/messages_0-28.jpeg" alt="blue french bulldog">
                 <div class="sold">SOLD</div>
-                Headed to Salt Lake City, UT
+                Garland, TX
                 </div>
                 <div class="card puppy"><h1>blue fawn boy 3
                 </h1><img src="images/puppies/sum22/male 3/messages_0-28.jpeg" alt="blue french bulldog">
                 <div class="sold">SOLD</div>
-                Headed to Providence, RI
+                Providence, RI
                     
                 </div>
                 <div class="card puppy"><h1>Momma</h1><img src="images/mamas/aurora.jpg" alt="blue fawn french bulldog">
@@ -91,13 +98,46 @@
 
             </div>
         </section>
+
+         <!-- features -->
+    <section class="features  bg-light py-3">
+        <div class="container p-5">
+            <h1 class="xl">EVERYBODY LOVES CHOCOLATE!</h1>
+            <p class="lead"> All our chocolate female puppies were snapped up in a flash. We have a fully-suited chocolate & tan,
+                a lilac-fawn merle, and two chocolate merles, all available as of Oct 19th. They all carry one testable and two
+                coco genes.
+            </p>
+        </div>
+        <div class="container grid">
+            <div class="card puppy"><img src="images/mamas/ZsaZsa-2.jpg" alt="dark chocolate french bulldog">
+            </div>
+            <div class="card puppy"><img src="images/zeus.jpeg" alt="blue french bulldog">
+            </div>
+            <div class="card puppy"><img src="images/puppies/chocolate/choco1.jpg" alt="dark chocolate french bulldog">
+            </div>
+            <div class="card puppy"><img src="images/puppies/chocolate/choco2.jpg" alt="dark chocolate french bulldog">
+            </div>
+            <div class="card puppy"><img src="images/puppies/chocolate/choco3.jpg" alt="dark chocolate french bulldog">
+            </div>
+            <div class="card puppy"><img src="images/puppies/chocolate/choco4.jpg" alt="dark chocolate french bulldog">
+            </div>
+            <div class="card puppy"><img src="images/puppies/chocolate/choco5.jpg" alt="dark chocolate french bulldog">
+            </div>
+            <div class="card puppy"><img src="images/puppies/chocolate/choco6.jpg" alt="dark chocolate french bulldog">
+            </div>
+            <div class="card puppy"><img src="images/puppies/chocolate/choco7.jpg" alt="dark chocolate french bulldog">
+            </div>
+        </div>
+
+        </div>
+
+    </section>
         <!-- second puppy section -->
         <section class="cloud bg-primary py-2">
             <div class="container grid">
                 <div class="text-center">
-                    <h2 class="lg">Both Merle Flully Carrier Boys have SOLD ! </h2>
-                    <p class="lead my-1">The blue merle is no longer available, carries cream and a
-                        fluffy gene. His coat is super soft due to his fluffy gene, and he is so sweet. We are motivated to find them a forever home.</p>
+                    <h2 class="lg">Micro Frenchies, carry Testable and Cocoa </h2>
+                    <p class="lead my-1">We have three crazy adorable boys from Elvira x Bevo litter. They all carry co/n and B/b. Both parents are micro.</p>
                 </div>
                 <img src="images/puppies/merle/blue1.jpg" alt="fluffy-carrier merle">
                 <img src="images/puppies/merle/merles.jpg" alt="fluffy-carrier merle">
