Update puppy pics

--- a/puppies.html
+++ b/puppies.html
@@ -139,28 +139,26 @@
                     <h2 class="lg">Micro Frenchies, carry Testable and Cocoa </h2>
                     <p class="lead my-1">We have three crazy adorable boys from Elvira x Bevo litter. They all carry co/n and B/b. Both parents are micro.</p>
                 </div>
-                <img src="images/puppies/merle/blue1.jpg" alt="fluffy-carrier merle">
-                <img src="images/puppies/merle/merles.jpg" alt="fluffy-carrier merle">
-                <img src="images/puppies/merle/merles2.jpg" alt="merle fluffy Carrier">
+                all black male
+                <img src="images/puppies/elvira/mbm2.jpeg" alt="choco-carrier male">
+                <img src="images/puppies/elvira/micro2.jpeg" alt="choco-carrier male">
+                <img src="images/puppies/elvira/micro2-1.jpeg" alt="choco-carrier male">
+                black and tan male 1
+                <img src="images/puppies/elvira/mbt1.jpeg" alt="choco-carrier male">
+                <img src="images/puppies/elvira/micro1-1.jpeg" alt="choco-carrier male">
+                <img src="images/puppies/elvira/micro1.jpeg" alt="choco-carrier male">
+                black and tan male 2
+                <img src="images/puppies/elvira/mbt2.jpeg" alt="choco-carrier male">
+                <img src="images/puppies/elvira/micro3.jpeg" alt="choco-carrier male">
+                <img src="images/puppies/elvira/micro3-1.jpeg" alt="choco-carrier male">
             </div>
         </section>
-
-        <!-- </section>
-        <section class=" bg-light py-2">
-            <div class="container grid">
-                <div class="text-center">
-                    <h2 class="lg">Mother</h2>
-                    <p class="lead my-1"> </p>
-                </div>
-                <img src="images/Luna/Luna.jpg alt="">
-            </div>
-        </section> -->
 
         <!-- Sub head -->
         <section class="showcase-puppy">
             <div class="container grid ">
                 <div class="showcase-puppy-text">
-                    <h1>SPRING 2022 PUPPIES</h1>
+                    <h1>Other 2022 PUPPIES</h1>
                 </div>
             </div>
 
