Update chocolate photos part 1

--- a/puppies.html
+++ b/puppies.html
@@ -103,19 +103,18 @@
     <section class="features  bg-light py-3">
         <div class="container p-5">
             <h1 class="xl">EVERYBODY LOVES CHOCOLATE!</h1>
-            <p class="lead"> All our chocolate female puppies were snapped up in a flash. We have a fully-suited chocolate & tan,
-                a lilac-fawn merle, and two chocolate merles, all available as of Oct 19th. They all carry one testable and two
+            <p class="lead"> We have a fully-suited chocolate & tan, a lilac-fawn merle, and two chocolate merles, all born 9/9/22. Each pup carries one testable and two
                 coco genes.
             </p>
         </div>
         <div class="container grid">
             <div class="card puppy"><img src="images/mamas/ZsaZsa-2.jpg" alt="dark chocolate french bulldog">
             </div>
-            <div class="card puppy"><img src="images/zeus.jpeg" alt="blue french bulldog">
+            <div class="card puppy"><img src="images/zeus.jpeg" alt="isabella merle french bulldog">
             </div>
-            <div class="card puppy"><img src="images/puppies/chocolate/choco1.jpg" alt="dark chocolate french bulldog">
+            <div class="card puppy"><img src="images/puppies/chocolate/littleC-1.jpg" alt="dark chocolate french bulldog">
             </div>
-            <div class="card puppy"><img src="images/puppies/chocolate/choco2.jpg" alt="dark chocolate french bulldog">
+            <div class="card puppy"><img src="images/puppies/chocolate/littleC-2.jpg" alt="dark chocolate french bulldog">
             </div>
             <div class="card puppy"><img src="images/puppies/chocolate/choco3.jpg" alt="dark chocolate french bulldog">
             </div>
@@ -139,18 +138,22 @@
                     <h2 class="lg">Micro Frenchies, carry Testable and Cocoa </h2>
                     <p class="lead my-1">We have three crazy adorable boys from Elvira x Bevo litter. They all carry co/n and B/b. Both parents are micro.</p>
                 </div>
+                <div>
                 all black male
                 <img src="images/puppies/elvira/mbm2.jpeg" alt="choco-carrier male">
                 <img src="images/puppies/elvira/micro2.jpeg" alt="choco-carrier male">
-                <img src="images/puppies/elvira/micro2-1.jpeg" alt="choco-carrier male">
+                <img src="images/puppies/elvira/micro2-1.jpeg" alt="choco-carrier male"></div>
+                <div>
                 black and tan male 1
                 <img src="images/puppies/elvira/mbt1.jpeg" alt="choco-carrier male">
                 <img src="images/puppies/elvira/micro1-1.jpeg" alt="choco-carrier male">
                 <img src="images/puppies/elvira/micro1.jpeg" alt="choco-carrier male">
+            </div>
+            <div>
                 black and tan male 2
                 <img src="images/puppies/elvira/mbt2.jpeg" alt="choco-carrier male">
                 <img src="images/puppies/elvira/micro3.jpeg" alt="choco-carrier male">
-                <img src="images/puppies/elvira/micro3-1.jpeg" alt="choco-carrier male">
+                <img src="images/puppies/elvira/micro3-1.jpeg" alt="choco-carrier male"></div>
             </div>
         </section>
 
