Updated chocolate part 2

--- a/puppies.html
+++ b/puppies.html
@@ -103,7 +103,7 @@
     <section class="features  bg-light py-3">
         <div class="container p-5">
             <h1 class="xl">EVERYBODY LOVES CHOCOLATE!</h1>
-            <p class="lead"> We have a fully-suited chocolate & tan, a lilac-fawn merle, and two chocolate merles, all born 9/9/22. Each pup carries one testable and two
+            <p class="lead"> We have a fully-suited chocolate & tan, a lilac-fawn merle, and two chocolate tweed merles, all born 9/9/22. Each pup carries one testable and two
                 coco genes.
             </p>
         </div>
@@ -116,15 +116,23 @@
             </div>
             <div class="card puppy"><img src="images/puppies/chocolate/littleC-2.jpg" alt="dark chocolate french bulldog">
             </div>
-            <div class="card puppy"><img src="images/puppies/chocolate/choco3.jpg" alt="dark chocolate french bulldog">
+            <div class="card puppy"><img src="images/puppies/chocolate/lfm1.jpeg" alt="dark chocolate french bulldog">
             </div>
-            <div class="card puppy"><img src="images/puppies/chocolate/choco4.jpg" alt="dark chocolate french bulldog">
+            <div class="card puppy"><img src="images/puppies/chocolate/lfm2.jpeg" alt="dark chocolate french bulldog">
             </div>
-            <div class="card puppy"><img src="images/puppies/chocolate/choco5.jpg" alt="dark chocolate french bulldog">
+            <div class="card puppy"><img src="images/puppies/chocolate/lfm3.jpeg" alt="dark chocolate french bulldog">
             </div>
-            <div class="card puppy"><img src="images/puppies/chocolate/choco6.jpg" alt="dark chocolate french bulldog">
+            <div class="card puppy"><img src="images/puppies/chocolate/ct1.jpeg" alt="dark chocolate french bulldog">
             </div>
-            <div class="card puppy"><img src="images/puppies/chocolate/choco7.jpg" alt="dark chocolate french bulldog">
+            <div class="card puppy"><img src="images/puppies/chocolate/ct2.jpeg" alt="dark chocolate french bulldog">
+            </div>
+            <div class="card puppy"><img src="images/puppies/chocolate/ct3.jpeg" alt="dark chocolate french bulldog">
+            </div>
+            <div class="card puppy"><img src="images/puppies/chocolate/cm1.jpeg" alt="dark chocolate french bulldog">
+            </div>
+            <div class="card puppy"><img src="images/puppies/chocolate/cm2.jpeg" alt="dark chocolate french bulldog">
+            </div>
+            <div class="card puppy"><img src="images/puppies/chocolate/cm3.jpeg" alt="dark chocolate french bulldog">
             </div>
         </div>
 
