Update puppy text

--- a/puppies.html
+++ b/puppies.html
@@ -49,7 +49,7 @@
         <section class="features  bg-primary py-3">
             <div class="container p-5">
                 <h1 class="xl">Puppies Available NOW:</h1>
-                <p class="lead"> Nov 11st: Well a week later all three boys have sold,leaving 3 girls available from Aurora's litter. Text us for updated info and pictures. We four male chocolates availabe, pictured on home page, and one fluffy carrier blue merle seen below.</p>
+                <p class="lead"> December 3rd: We only have 2 girls left from Aurora and Jer Bear's blue and tan litter. We four male chocolates availabe and three micros that are chocolate carriers.</p>
             </div>
             <div class="container grid">
                 <div class="card puppy">
@@ -102,7 +102,7 @@
          <!-- features -->
     <section class="features  bg-light py-3">
         <div class="container p-5">
-            <h1 class="xl">EVERYBODY LOVES CHOCOLATE!</h1>
+            <h1 class="xl">La Bear CHOCOLATES!</h1>
             <p class="lead"> We have a fully-suited chocolate & tan, a lilac-fawn merle, and two chocolate tweed merles, all born 9/9/22. Each pup carries one testable and two
                 coco genes.
             </p>
