--- a/puppies.html
+++ b/puppies.html
@@ -49,7 +49,7 @@
         <section class="features  bg-primary py-3">
             <div class="container p-5">
                 <h1 class="xl">Puppies Available NOW:</h1>
-                <p class="lead"> December 3rd: We only have 2 girls left from Aurora and Jer Bear's blue and tan litter. We four male chocolates availabe and three micros that are chocolate carriers.</p>
+                <p class="lead"> December 3rd: We only have 2 girls left from Aurora and Jer Bear's blue and tan litter. We four male chocolates availabe and one of our three micros that are chocolate carriers.</p>
             </div>
             <div class="container grid">
                 <div class="card puppy">
@@ -147,7 +147,7 @@
                     <p class="lead my-1">We have three crazy adorable boys from Elvira x Bevo litter. They all carry co/n and B/b. Both parents are micro.</p>
                 </div>
                 <div>
-                all black male
+                all black male - RESERVED
                 <img src="images/puppies/elvira/mbm2.jpeg" alt="choco-carrier male">
                 <img src="images/puppies/elvira/micro2.jpeg" alt="choco-carrier male">
                 <img src="images/puppies/elvira/micro2-1.jpeg" alt="choco-carrier male"></div>
@@ -158,7 +158,7 @@
                 <img src="images/puppies/elvira/micro1.jpeg" alt="choco-carrier male">
             </div>
             <div>
-                black and tan male 2
+                black and tan male 2 - SOLD
                 <img src="images/puppies/elvira/mbt2.jpeg" alt="choco-carrier male">
                 <img src="images/puppies/elvira/micro3.jpeg" alt="choco-carrier male">
                 <img src="images/puppies/elvira/micro3-1.jpeg" alt="choco-carrier male"></div>
