Update pay page

--- a/pay.html
+++ b/pay.html
@@ -60,7 +60,7 @@
         <section class="showcase">
             <div class="container grid">
                 <div class="showcase-text">
-                    <p>To make a payment, please enter a short description of the puppy or stud you are paying for in the top box. Enter the payment amount in the second box. Then click on "Debit or Credit Card" and follow the prompts to enter your information.
+                    <p>To make a payment, please enter a short description of the puppy or stud you are paying for in the top box. Enter the payment amount in the second box. Then click on "Debit or Credit Card" and follow the prompts to enter your information. Leave the ship to billing address box checked.
                     </p>
                 </div>
 
