--- a/puppies.html
+++ b/puppies.html
@@ -49,15 +49,15 @@
         <section class="features  bg-primary py-3">
             <div class="container p-5">
                 <h1 class="xl">Puppies Available NOW:</h1>
-                <p class="lead"> December 9th: We have 2 girls aviable from Aurora and Jer Bear's blue and tan litter -- pictured immedately below. We also four male chocolates availabe and one chocoloate-carrier micro. See below:</p>
+                <p class="lead"> December 9th: We have 1 girl available from Aurora and Jer Bear's blue and tan litter -- pictured immedately below. We also four male chocolates availabe and one chocoloate-carrier micro. See below:</p>
             </div>
             <div class="container grid">
-                <div class="card puppy">
+                <!-- <div class="card puppy">
                     <h1>blue and tan GIRL 1
                     </h1>
                     <img src="images/puppies/sum22/bluentan-1.jpg" alt="blue and tan french bulldog">
                     <img src="images/puppies/sum22/bluentan-6.jpg" alt="blue and tan french bulldog">
-                </div>
+                </div> -->
                 <div class="card puppy">
                     <h1>blue and tan GIRL 2
                     </h1>
