--- a/pay.html
+++ b/pay.html
@@ -68,7 +68,7 @@
                     <div id="smart-button-container">
                         <div style="text-align: center"><label for="description">Puppy Description </label><input type="text" name="descriptionInput" id="description" maxlength="127" value=""></div>
                           <p id="descriptionError" style="visibility: hidden; color:red; text-align: center;">Please enter a description</p>
-                        <div style="text-align: center"><label for="amount">Puppy Price </label><input name="amountInput" type="number" id="amount" value="" ><span> USD</span></div>
+                        <div style="text-align: center"><label for="amount">Payment </label><input name="amountInput" type="number" id="amount" value="" ><span> USD</span></div>
                           <p id="priceLabelError" style="visibility: hidden; color:red; text-align: center;">Please enter a price</p>
                         <div id="invoiceidDiv" style="text-align: center; display: none;"><label for="invoiceid"> </label><input name="invoiceid" maxlength="127" type="text" id="invoiceid" value="" ></div>
                           <p id="invoiceidError" style="visibility: hidden; color:red; text-align: center;">Please enter an Invoice ID</p>
@@ -185,6 +185,7 @@
                       </script>
 
                 </div>
+                
             </div>
         </section>
 
