Add choco video to pup page

--- a/puppies.html
+++ b/puppies.html
@@ -50,6 +50,8 @@
             <h1 class="xl">Puppies Available NOW:</h1>
             <p class="lead"> December 11th: We have four male chocolates available, all carrying Bb, coco; and one chocoloate-carrier
                 micro:</p>
+                <iframe class="video" src="https://www.youtube.com/embed/_27PZblTQaA" frameborder="0"
+                    allow="accelerometer; autoplay; encrypted-media; gyroscope;" allowfullscreen></iframe>
                 <div >
                 
             </div>
