Update pup page xmas

--- a/puppies.html
+++ b/puppies.html
@@ -48,12 +48,13 @@
     <section class="features  bg-primary py-3">
         <div class="container p-5">
             <h1 class="xl">Puppies Available NOW:</h1>
-            <p class="lead"> December 11th: We have four male chocolates available, all carrying Bb, coco; and one chocoloate-carrier
+            <p class="lead"> December 11th: We have four male chocolates available, all carrying Bb, coco; and one
+                chocoloate-carrier
                 micro:</p>
-                <iframe class="video" src="https://www.youtube.com/embed/_27PZblTQaA" frameborder="0"
-                    allow="accelerometer; autoplay; encrypted-media; gyroscope;" allowfullscreen></iframe>
-                <div >
-                
+            <iframe class="video" src="https://www.youtube.com/embed/_27PZblTQaA" frameborder="0"
+                allow="accelerometer; autoplay; encrypted-media; gyroscope;" allowfullscreen></iframe>
+            <div>
+
             </div>
         </div>
         <div class="container grid">
@@ -84,46 +85,43 @@
     </section>
 
     <!-- features -->
-    <!-- <section class="features  bg-light py-3">
+    <section class="features  bg-light py-3">
         <div class="container p-5">
-            <h1 class="xl">CHOCOLATES!</h1>
-            <p class="lead"> We have 4 male chocolates available: fully-suited chocolate & tan, a lilac-fawn merle, and
+            <h1 class="xl">Happy Holidays!</h1>
+            <!-- <p class="lead"> We have 4 male chocolates available: fully-suited chocolate & tan, a lilac-fawn merle, and
                 two chocolate tweed merles, all born 9/9/22. Each pup carries one testable and two
                 coco genes.
-            </p>
+            </p> -->
         </div>
         <div class="container grid">
-            <div class="card puppy"><img src="images/mamas/ZsaZsa-2.jpg" alt="dark chocolate french bulldog">
+            <div class="card puppy"><img src="images/puppies/xmas/xmas-01.jpg" alt="dark chocolate french bulldog">
             </div>
-            <div class="card puppy"><img src="images/zeus.jpeg" alt="isabella merle french bulldog">
-        </div>
-        <div class="card puppy">
-        </div>
-        <div class="card puppy"><img src="images/puppies/chocolate/littleC-2.jpg" alt="dark chocolate french bulldog">
-        </div>
-        <div class="card puppy"><img src="images/puppies/chocolate/lfm1.jpeg" alt="dark chocolate french bulldog">
-        </div>
-        <div class="card puppy"><img src="images/puppies/chocolate/lfm2.jpeg" alt="dark chocolate french bulldog">
-        </div>
-        <div class="card puppy"><img src="images/puppies/chocolate/lfm3.jpeg" alt="dark chocolate french bulldog">
-        </div>
-        <div class="card puppy"><img src="images/puppies/chocolate/ct1.jpeg" alt="dark chocolate french bulldog">
-        </div>
-        <div class="card puppy"><img src="images/puppies/chocolate/ct2.jpeg" alt="dark chocolate french bulldog">
-        </div>
-        <div class="card puppy"><img src="images/puppies/chocolate/ct3.jpeg" alt="dark chocolate french bulldog">
-        </div>
-        <div class="card puppy"><img src="images/puppies/chocolate/cm1.jpeg" alt="dark chocolate french bulldog">
-        </div>
-        <div class="card puppy">
-        </div>
-        <div class="card puppy"><img src="images/puppies/chocolate/cm3.jpeg" alt="dark chocolate french bulldog">
-        </div>
+            <div class="card puppy"><img src="images/puppies/xmas/xmas-02.jpg" alt="dark chocolate french bulldog">
+            </div>
+            <div class="card puppy"><img src="images/puppies/xmas/xmas-03.jpg" alt="dark chocolate french bulldog">
+            </div>
+            <div class="card puppy"><img src="images/puppies/xmas/xmas-04.jpg" alt="dark chocolate french bulldog">
+            </div>
+            <div class="card puppy"><img src="images/puppies/xmas/xmas-05.jpg" alt="dark chocolate french bulldog">
+            </div>
+            <div class="card puppy"><img src="images/puppies/xmas/xmas-06.jpg" alt="dark chocolate french bulldog">
+            </div>
+            <div class="card puppy"><img src="images/puppies/xmas/xmas-07.jpg" alt="dark chocolate french bulldog">
+            </div>
+            <div class="card puppy"><img src="images/puppies/xmas/xmas-08.jpg" alt="dark chocolate french bulldog">
+            </div>
+            <div class="card puppy"><img src="images/puppies/xmas/xmas-09.jpg" alt="dark chocolate french bulldog">
+            </div>
+            <div class="card puppy"><img src="images/puppies/xmas/xmas-10.jpg" alt="dark chocolate french bulldog">
+            </div>
+            <div class="card puppy"><img src="images/puppies/xmas/xmas-11.jpg" alt="dark chocolate french bulldog">
+            </div>
+            <div class="card puppy"><img src="images/puppies/xmas/xmas-12.jpg" alt="dark chocolate french bulldog">
+            </div>
         </div>
 
-        </div>
 
-    </section> -->
+    </section>
     <!-- second puppy section -->
     <!-- <section class="cloud bg-primary py-2">
         <div class="container grid">
