--- a/puppies.html
+++ b/puppies.html
@@ -48,7 +48,7 @@
     <section class="features  bg-primary py-3">
         <div class="container p-5">
             <h1 class="xl">Puppies Available NOW:</h1>
-            <p class="lead"> December 11th: We have four male chocolates available, all carrying Bb, coco; and one
+            <p class="lead"> December 12th: We have three male chocolates available, all carrying Bb, coco; and one
                 chocoloate-carrier
                 micro:</p>
             <iframe class="video" src="https://www.youtube.com/embed/_27PZblTQaA" frameborder="0"
@@ -76,6 +76,7 @@
             <div class="card puppy">
                 <h1>chocolate & tan</h1>
                 <img src="images/puppies/chocolate/ct3.jpeg" alt="dark chocolate french bulldog">
+                <h3>SOLD, Dallas</h3>
             </div>
             <div class="card puppy">
                 <h1>lilac fawn merle</h1>
