--- a/puppies.html
+++ b/puppies.html
@@ -76,6 +76,7 @@
             <div class="card puppy">
                 <h1>chocolate & tan</h1>
                 <img src="images/puppies/chocolate/ct3.jpeg" alt="dark chocolate french bulldog">
+                <div class="sold">SOLD</div>
                 <h3>SOLD, Dallas</h3>
             </div>
             <div class="card puppy">
