--- a/puppies.html
+++ b/puppies.html
@@ -48,7 +48,7 @@
     <section class="features  bg-primary py-3">
         <div class="container p-5">
             <h1 class="xl">Puppies Available NOW:</h1>
-            <p class="lead"> December 12th: We have three male chocolates available, all carrying Bb, coco; and one
+            <p class="lead"> December 18th: We have two chocolate merles available, both carrying Bb, coco; and one
                 chocoloate-carrier
                 micro:</p>
             <iframe class="video" src="https://www.youtube.com/embed/_27PZblTQaA" frameborder="0"
@@ -60,9 +60,9 @@
         <div class="container grid">
             <div class="card puppy">
                 <h1>chocolate carrier (Bb co/n) micro</h1>
-                <img class="animated-gif" src="images/puppies/elvira/microblack.gif" alt="choco-carrier male">
+                <!-- <img class="animated-gif" src="images/puppies/elvira/microblack.gif" alt="choco-carrier male">
                 <img src="images/puppies/elvira/microb1.jpeg" alt="choco-carrier male">
-                <img src="images/puppies/elvira/microb3.jpeg" alt="choco-carrier male">
+                <img src="images/puppies/elvira/microb3.jpeg" alt="choco-carrier male"> -->
                 <img src="images/puppies/elvira/micro1-1.jpeg" alt="choco-carrier male">
             </div>
             <div class="card puppy">
@@ -82,6 +82,8 @@
             <div class="card puppy">
                 <h1>lilac fawn merle</h1>
                 <img src="images/puppies/chocolate/lfm2.jpeg" alt="dark chocolate french bulldog">
+                <div class="sold">SOLD</div>
+                <h3>SOLD, Dallas</h3>
             </div>
         </div>
     </section>
