--- a/puppies.html
+++ b/puppies.html
@@ -60,18 +60,25 @@
         <div class="container grid">
             <div class="card puppy">
                 <h1>chocolate carrier (Bb co/n) micro</h1>
-                <!-- <img class="animated-gif" src="images/puppies/elvira/microblack.gif" alt="choco-carrier male">
-                <img src="images/puppies/elvira/microb1.jpeg" alt="choco-carrier male">
-                <img src="images/puppies/elvira/microb3.jpeg" alt="choco-carrier male"> -->
                 <img src="images/puppies/elvira/micro1-1.jpeg" alt="choco-carrier male">
+                <img src="images/puppies/chocolate/choco-02.jpg" alt="choco-carrier male">
             </div>
             <div class="card puppy">
                 <h1>chocolate merle #1 </h1>
-                <img src="images/puppies/chocolate/cm2.jpeg" alt="dark chocolate french bulldog">
+                <img src="images/puppies/chocolate/choco-03.jpg" alt="dark chocolate french bulldog">
+                <img src="images/puppies/chocolate/choco-05.jpg" alt="dark chocolate french bulldog">
+               
             </div>
             <div class="card puppy">
                 <h1>chocolate merle #2 </h1>
-                <img src="images/puppies/chocolate/littleC-1.jpg" alt="dark chocolate french bulldog">
+                <img src="images/puppies/chocolate/choco-04.jpg" alt="dark chocolate french bulldog">
+                <img src="images/puppies/chocolate/choco-06.jpg" alt="dark chocolate french bulldog">
+                
+            </div>
+            <div class="card puppy">
+                <h1>chocolate merle #1 & #2 </h1>
+                <img src="images/puppies/chocolate/choco-07.jpg" alt="dark chocolate french bulldog">
+                <img src="images/puppies/chocolate/choco-09.jpg" alt="dark chocolate french bulldog">
             </div>
             <div class="card puppy">
                 <h1>chocolate & tan</h1>
@@ -84,6 +91,11 @@
                 <img src="images/puppies/chocolate/lfm2.jpeg" alt="dark chocolate french bulldog">
                 <div class="sold">SOLD</div>
                 <h3>SOLD, Dallas</h3>
+            </div>
+            <div class="card puppy">
+                <h1>chocolate merle parents</h1>
+                <img src="images/puppies/chocolate/choco-01.jpg" alt="dark chocolate french bulldog">
+                <img src="images/zeus.jpeg" alt="dark chocolate french bulldog">
             </div>
         </div>
     </section>
