--- a/puppies.html
+++ b/puppies.html
@@ -48,7 +48,7 @@
     <section class="features  bg-primary py-3">
         <div class="container p-5">
             <h1 class="xl">Puppies Available NOW:</h1>
-            <p class="lead"> December 18th: We have two chocolate merles available, both carrying Bb, coco; and one
+            <p class="lead"> December 22nd: We have two chocolate merles available, both carrying Bb, coco; and one
                 chocoloate-carrier
                 micro:</p>
             <iframe class="video" src="https://www.youtube.com/embed/_27PZblTQaA" frameborder="0"
