Update pup sales

--- a/puppies.html
+++ b/puppies.html
@@ -48,9 +48,7 @@
     <section class="features  bg-primary py-3">
         <div class="container p-5">
             <h1 class="xl">Puppies Available NOW:</h1>
-            <p class="lead"> December 22nd: We have two chocolate merles available, both carrying Bb, coco; and one
-                chocoloate-carrier
-                micro:</p>
+            <p class="lead"> December 30th: We have one chocolate merles available, carrying Bb, coco.</p>
             <iframe class="video" src="https://www.youtube.com/embed/_27PZblTQaA" frameborder="0"
                 allow="accelerometer; autoplay; encrypted-media; gyroscope;" allowfullscreen></iframe>
             <div>
@@ -61,7 +59,8 @@
             <div class="card puppy">
                 <h1>chocolate carrier (Bb co/n) micro</h1>
                 <img src="images/puppies/elvira/micro1-1.jpeg" alt="choco-carrier male">
-                <img src="images/puppies/chocolate/choco-02.jpg" alt="choco-carrier male">
+                <div class="sold">SOLD</div>
+                <h3>SOLD, Tampa</h3>
             </div>
             <div class="card puppy">
                 <h1>chocolate merle #1 </h1>
@@ -72,7 +71,8 @@
             <div class="card puppy">
                 <h1>chocolate merle #2 </h1>
                 <img src="images/puppies/chocolate/choco-04.jpg" alt="dark chocolate french bulldog">
-                <img src="images/puppies/chocolate/choco-06.jpg" alt="dark chocolate french bulldog">
+                <div class="sold">SOLD</div>
+                <h3>SOLD, Salt Lake City</h3>
                 
             </div>
             <div class="card puppy">
