--- a/puppies.html
+++ b/puppies.html
@@ -48,7 +48,7 @@
     <section class="features  bg-primary py-3">
         <div class="container p-5">
             <h1 class="xl">Puppies Available NOW:</h1>
-            <p class="lead"> Jan 2nd: We have one female cream-carrier available. All the chooclates have sold.</p>
+            <p class="lead"> Jan 2nd: We have no puppies available. Please check back mid January for a new litter.</p>
             <!-- <iframe class="video" src="https://www.youtube.com/embed/_27PZblTQaA" frameborder="0"
                 allow="accelerometer; autoplay; encrypted-media; gyroscope;" allowfullscreen></iframe>
             <div> -->
@@ -59,6 +59,8 @@
             <div class="card puppy">
             <h1>female, carries cream</h1>
                 <img src="images/puppies/xmas/cream.jpeg" alt="choco-carrier male">
+                <div class="sold">SOLD</div>
+                <h3>SOLD, Dallas</h3>
             </div>
             <div class="card puppy">
                 <h1>chocolate carrier (Bb co/n) micro</h1>
@@ -69,7 +71,6 @@
             <div class="card puppy">
                 <h1>chocolate merle #1 </h1>
                 <img src="images/puppies/chocolate/choco-03.jpg" alt="dark chocolate french bulldog">
-                <img src="images/puppies/chocolate/choco-05.jpg" alt="dark chocolate french bulldog">
                 <div class="sold">SOLD</div>
                 <h3>SOLD, Waco</h3>
             </div>
