--- a/puppies.html
+++ b/puppies.html
@@ -48,7 +48,7 @@
     <section class="features  bg-primary py-3">
         <div class="container p-5">
             <h1 class="xl">Puppies Available NOW:</h1>
-            <p class="lead"> Jan 2nd: We have no puppies available. Please check back mid January for a new litter.</p>
+            <p class="lead"> Jan 3rd: We actually have one little boy puppy available. Please check back in mid-January for a new litter.</p>
             <!-- <iframe class="video" src="https://www.youtube.com/embed/_27PZblTQaA" frameborder="0"
                 allow="accelerometer; autoplay; encrypted-media; gyroscope;" allowfullscreen></iframe>
             <div> -->
@@ -57,10 +57,9 @@
         </div>
         <div class="container grid">
             <div class="card puppy">
-            <h1>female, carries cream</h1>
-                <img src="images/puppies/xmas/cream.jpeg" alt="choco-carrier male">
-                <div class="sold">SOLD</div>
-                <h3>SOLD, Dallas</h3>
+            <h1>male, carries cream -- Available</h1>
+                <img src="images/puppies/xmas/boy.jpeg" alt="choco-carrier male">
+                <img src="images/puppies/xmas/boy1.jpeg" alt="choco-carrier male">
             </div>
             <div class="card puppy">
                 <h1>chocolate carrier (Bb co/n) micro</h1>
