Update pup page Jan22

--- a/puppies.html
+++ b/puppies.html
@@ -48,19 +48,23 @@
     <section class="features  bg-primary py-3">
         <div class="container p-5">
             <h1 class="xl">Puppies Available NOW:</h1>
-            <p class="lead"> Jan 3rd: We actually have one little boy puppy available. Please check back in mid-January for a new litter.</p>
+            <p class="lead"> Jan 22nd: We actually have one 12 week old little boy puppy available -- the last of his litter. AND We just had three litters. Fraulein's little babies are a week old now -- four girls and one boy. We will be posting pictures of Olivia's and Borgia's litters in the coming week.</p>
             <!-- <iframe class="video" src="https://www.youtube.com/embed/_27PZblTQaA" frameborder="0"
                 allow="accelerometer; autoplay; encrypted-media; gyroscope;" allowfullscreen></iframe>
             <div> -->
-
+                <div class="card puppy">
+                    <h1>Fraulien's litter of blue and blue merles</h1>
+                        <img src="images/puppies/frauslitter1week.jpeg" alt="choco-carrier male">
+                    </div>
             </div>
         </div>
         <div class="container grid">
             <div class="card puppy">
             <h1>male, carries cream -- Available</h1>
-                <img src="images/puppies/xmas/boy.jpeg" alt="choco-carrier male">
-                <img src="images/puppies/xmas/boy1.jpeg" alt="choco-carrier male">
+                <img src="images/puppies/messages_0-64.jpeg" alt="choco-carrier male">
             </div>
+            
+
             <div class="card puppy">
                 <h1>chocolate carrier (Bb co/n) micro</h1>
                 <img src="images/puppies/elvira/micro1-1.jpeg" alt="choco-carrier male">
