--- a/puppies.html
+++ b/puppies.html
@@ -48,7 +48,7 @@
     <section class="features  bg-primary py-3">
         <div class="container p-5">
             <h1 class="xl">Puppies Available NOW:</h1>
-            <p class="lead"> Jan 22nd: We actually have one 12 week old little boy puppy available -- the last of his litter. AND We just had three litters. Fraulein's little babies are a week old now -- four girls and one boy. We will be posting pictures of Olivia's and Borgia's litters in the coming week.</p>
+            <p class="lead"> Jan 27th: We were blessed with three litters last week. Fraulein's little babies are two weeks old now -- four girls and one boy. We will be posting pictures of Olivia's and Borgia's litters in the coming week.</p>
             <!-- <iframe class="video" src="https://www.youtube.com/embed/_27PZblTQaA" frameborder="0"
                 allow="accelerometer; autoplay; encrypted-media; gyroscope;" allowfullscreen></iframe>
             <div> -->
@@ -59,12 +59,6 @@
             </div>
         </div>
         <div class="container grid">
-            <div class="card puppy">
-            <h1>male, carries cream -- Available</h1>
-                <img src="images/puppies/messages_0-64.jpeg" alt="choco-carrier male">
-            </div>
-            
-
             <div class="card puppy">
                 <h1>chocolate carrier (Bb co/n) micro</h1>
                 <img src="images/puppies/elvira/micro1-1.jpeg" alt="choco-carrier male">
