--- a/puppies.html
+++ b/puppies.html
@@ -48,13 +48,17 @@
     <section class="features  bg-primary py-3">
         <div class="container p-5">
             <h1 class="xl">Puppies Available NOW:</h1>
-            <p class="lead"> Jan 27th: We were blessed with three litters last week. Fraulein's little babies are two weeks old now -- four girls and one boy. We will be posting pictures of Olivia's and Borgia's litters in the coming week.</p>
+            <p class="lead"> March 11th: We currently have one puppy available, a merle female carrying testable chocolate and blue. She's a little tiger.</p>
             <!-- <iframe class="video" src="https://www.youtube.com/embed/_27PZblTQaA" frameborder="0"
                 allow="accelerometer; autoplay; encrypted-media; gyroscope;" allowfullscreen></iframe>
             <div> -->
                 <div class="card puppy">
-                    <h1>Fraulien's litter of blue and blue merles</h1>
-                        <img src="images/puppies/frauslitter1week.jpeg" alt="choco-carrier male">
+                    <h1>female puppy available</h1>
+                    <img src="images/puppies/tiger4.jpeg" alt="choco-carrier female">
+                        <img src="images/puppies/tiger1.jpeg" alt="choco-carrier female">
+                        <img src="images/puppies/tiger2.jpeg" alt="choco-carrier female">
+                        <img src="images/puppies/tiger3.jpeg" alt="choco-carrier female">
+                        
                     </div>
             </div>
         </div>
