--- a/puppies.html
+++ b/puppies.html
@@ -48,7 +48,7 @@
     <section class="features  bg-primary py-3">
         <div class="container p-5">
             <h1 class="xl">Puppies Available NOW:</h1>
-            <p class="lead"> March 16th: We currently have two puppies available:</p>
+            <p class="lead"> March 16th: We currently have three puppies available:</p>
             <!-- <iframe class="video" src="https://www.youtube.com/embed/_27PZblTQaA" frameborder="0"
                 allow="accelerometer; autoplay; encrypted-media; gyroscope;" allowfullscreen></iframe>
             <div> -->
@@ -70,8 +70,6 @@
             <div class="card puppy">
                 <h1>platinum male </h1>
                 <img src="images/puppies/jose-1.jpg" alt="platinum french bulldog">
-                <div class="sold">SOLD</div>
-                <h3>SOLD, Dallas</h3>
                 
             </div>
             <div class="card puppy">
