--- a/puppies.html
+++ b/puppies.html
@@ -66,8 +66,8 @@
             <div class="card puppy">
                 <h1>chocolate carrying female sired by Romeo</h1>
                 <img src="images/puppies/tiger4.jpeg" alt="choco-carrier female">
-                <img src="images/puppies/tiger1.jpeg" alt="">
-                <img src="images/puppies/tiger3.jpeg" alt="">
+                <div class="sold">SOLD</div>
+                <h3>SOLD, Richardson, TX</h3>
             </div>
             <div class="card puppy">
                 <h1>platinum male </h1>
@@ -77,10 +77,10 @@
                 <img src="images/puppies/jose-5.jpg" alt="">
             </div>
             <div class="card puppy">
-                <h1>lilac and tan female</h1>
+                <h1>lilac and tan female, carries chocolate</h1>
                 <img src="images/puppies/jose-2.jpg" alt="lilac tan french bulldog">
-                <img src="images/puppies/jose-6.jpg" alt="">
-                <img src="images/puppies/jose-7.jpg" alt="">
+                <img src="images/puppies/jose-6.jpeg" alt="">
+                <img src="images/puppies/jose-7.jpeg" alt="">
             </div>
            
         </div>
