--- a/puppies.html
+++ b/puppies.html
@@ -48,7 +48,7 @@
     <section class="features  bg-primary py-3">
         <div class="container p-5">
             <h1 class="xl">Puppies Available NOW:</h1>
-            <p class="lead"> April 14th - We currently have one puppy available:</p>
+            <p class="lead"> April 17th - We currently have one puppy available:</p>
             <!-- <iframe class="video" src="https://www.youtube.com/embed/_27PZblTQaA" frameborder="0"
                 allow="accelerometer; autoplay; encrypted-media; gyroscope;" allowfullscreen></iframe>
             <div> -->
@@ -64,10 +64,12 @@
         </div>
         <div class="container grid">
             <div class="card puppy">
-                <h1>micro blue female, price: $5500</h1>
+                <h1>micro blue female, 4 months old, $5500</h1>
                 <img src="images/puppies/bridget1.jpeg" alt="choco-carrier female">
                 <img src="images/puppies/bridget3.jpeg" alt="choco-carrier female">
                 <img src="images/puppies/bridget2.jpeg" alt="choco-carrier female">
+                <img src="images/puppies/bridget4.jpeg" alt="choco-carrier female">
+                <img src="images/puppies/bridget5.jpeg" alt="choco-carrier female">
                 <!-- <div class="sold">SOLD</div>
                 <h3>SOLD, Richardson, TX</h3> -->
             </div>
