--- a/stud.html
+++ b/stud.html
@@ -50,7 +50,7 @@
             <div class="container grid">
                 <div>
                     <h1 class="xl">La Bear's Chocolate Shop</h1>
-                    <p>We're thrilled to celebrate Romeo's first trophy from his frist show: Texas Bully Association
+                    <p>We're thrilled to celebrate Romeo's first trophy from his first show: Texas Bully Association
                         Best Chocolate Frenchie!</p>
                     <!-- <p class="lead"> Get your chocolates here. La Bear Frenchies now has three chocolate-colored, AKC
                         registered Studs. Romeo, out of Mr GORE, carries double testable choloate with one cocoa and can
