--- a/puppies.html
+++ b/puppies.html
@@ -48,7 +48,7 @@
     <section class="features  bg-primary py-3">
         <div class="container p-5">
             <h1 class="xl">Puppies Available NOW:</h1>
-            <p class="lead">  June 26th - We currently have several male and several female puppies available. </p>
+            <p class="lead">  June 28th - We currently have both boy and girl puppies available: </p>
             <!-- <iframe class="video" src="https://www.youtube.com/embed/_27PZblTQaA" frameborder="0"
                 allow="accelerometer; autoplay; encrypted-media; gyroscope;" allowfullscreen></iframe>
             <div> -->
@@ -73,13 +73,13 @@
             </div>
             <div class="card puppy">
                 <h1>black and tan boy:
-                <img src="images/puppies/olgie-05.jpg" alt="">
-                <img src="images/puppies/olgie-06.jpg" alt="">
+                <img src="images/puppies/olgie-15.jpg" alt="">
+                <img src="images/puppies/olgie-16.jpg" alt="">
             </div>
             <div class="card puppy">
                 <h1>pied fawn, boy</h1>
                 <img src="images/puppies/olgie-07.jpg" alt="french bulldog puppy">
-                <img src="images/puppies/piedmale.jpeg" alt="french bulldog puppy">
+                <img src="images/puppies/olgie-14.jpg" alt="french bulldog puppy">
                 <!-- <div class="sold">SOLD</div>
                 <h3>SOLD, Dallas</h3> -->
             </div>
