--- a/puppies.html
+++ b/puppies.html
@@ -48,7 +48,7 @@
     <section class="features  bg-primary py-3">
         <div class="container p-5">
             <h1 class="xl">Puppies Available NOW:</h1>
-            <p class="lead">  June 28th - We currently have both boy and girl puppies available: </p>
+            <p class="lead">  July 7th - We currently have both boy and girl puppies available. Prices start at $4,000. </p>
             <!-- <iframe class="video" src="https://www.youtube.com/embed/_27PZblTQaA" frameborder="0"
                 allow="accelerometer; autoplay; encrypted-media; gyroscope;" allowfullscreen></iframe>
             <div> -->
@@ -64,10 +64,10 @@
         </div>
         <div class="container grid">
             <div class="card puppy">
-                <h1>chocolate, fluffy-carrier boy.</h1>
-                <img src="images/puppies/fj1.jpeg" alt="choco-carrier female">
-                <img src="images/puppies/fj2.jpeg" alt="choco-carrier female">
-                <img src="images/puppies/ferjr-2.jpg" alt="choco-carrier female">
+                <h1>chocolate, fluffy-carrier boy</h1>
+                <img src="images/puppies/olgie-24.jpg" alt="choco-carrier male">
+                <img src="images/puppies/olgie-25.jpg" alt="choco-carrier male">
+                <img src="images/puppies/olgie-26.jpg" alt="choco-carrier male">
                 <!-- <div class="sold">SOLD</div>
                 <h3>SOLD, Philadelphia, PA</h3> -->
             </div>
@@ -75,27 +75,45 @@
                 <h1>black and tan boy:
                 <img src="images/puppies/olgie-15.jpg" alt="">
                 <img src="images/puppies/olgie-16.jpg" alt="">
+                <div class="sold">RESERVED</div>
+                <h3>RESERVED, Dallas</h3>
             </div>
             <div class="card puppy">
                 <h1>pied fawn, boy</h1>
-                <img src="images/puppies/olgie-07.jpg" alt="french bulldog puppy">
-                <img src="images/puppies/olgie-14.jpg" alt="french bulldog puppy">
+                <img src="images/puppies/olgie-17.jpg" alt="pied fawn male">
+                <img src="images/puppies/olgie-18.jpg" alt="pied fawn male">
+                <img src="images/puppies/olgie-23.jpg" alt="pied fawn male">
                 <!-- <div class="sold">SOLD</div>
                 <h3>SOLD, Dallas</h3> -->
             </div>
 
             <div class="card puppy">
-                <h1>pied black, girl</h1>
-                <img src="images/puppies/piedfemale.jpeg" alt="french bulldog puppy">
-                <img src="images/puppies/olgie-04.jpg" alt="french bulldog puppy">
+                <h1>pied black and tan, girl</h1>
+                <img src="images/puppies/piedfemale.jpeg" alt="pied black and tan female">
+                <img src="images/puppies/olgie-21.jpg" alt="pied black and tan female">
+                <img src="images/puppies/olgie-22.jpg" alt="pied black and tan female">
+                <!-- <div class="sold">SOLD</div>
+                <h3>SOLD, Dallas</h3> -->
+            </div>
+
+            <div class="card puppy">
+                <h1>pied sable, girl, runt of litter</h1>
+                <img src="images/puppies/olgie-19.jpg" alt="pied sable female">
+                <img src="images/puppies/olgie-20.jpg" alt="pied sable female">
                 <!-- <div class="sold">SOLD</div>
                 <h3>SOLD, Dallas</h3> -->
             </div>
            
             <div class="card puppy">
                 <h1>Two fawn boys</h1>
-                <img src="images/puppies/fawns.jpeg" alt="french bulldog puppy">
-                <img src="images/puppies/olgie-13.jpg" alt="french bulldog puppy">
+                
+                <img src="images/puppies/olgie-33.jpg" alt="french bulldog puppy">
+                <img src="images/puppies/olgie-32.jpg" alt="french bulldog puppy">
+                <img src="images/puppies/olgie-31.jpg" alt="french bulldog puppy">
+                <img src="images/puppies/olgie-30.jpg" alt="french bulldog puppy">
+                <img src="images/puppies/olgie-29.jpg" alt="french bulldog puppy">
+                <img src="images/puppies/olgie-28.jpg" alt="french bulldog puppy">
+                <img src="images/puppies/olgie-27.jpg" alt="french bulldog puppy">
                 <!-- <div class="sold">SOLD</div>
                 <h3>SOLD, Dallas</h3> -->
             </div>
