--- a/puppies.html
+++ b/puppies.html
@@ -40,7 +40,7 @@
     <section class="features  bg-primary py-3">
         <div class="container p-5">
             <h1 class="xl">Puppies Available NOW:</h1>
-            <p class="lead">  July 7th - We currently have both boy and girl puppies available. Prices start at $4,000. </p>
+            <p class="lead">  July 10th - We currently have both boy and girl puppies available. Prices start at $3,500. </p>
             <!-- <iframe class="video" src="https://www.youtube.com/embed/_27PZblTQaA" frameborder="0"
                 allow="accelerometer; autoplay; encrypted-media; gyroscope;" allowfullscreen></iframe>
             <div> -->
@@ -72,8 +72,8 @@
             </div>
             <div class="card puppy">
                 <h1>pied fawn, boy</h1>
-                <img src="images/puppies/olgie-17.jpg" alt="pied fawn male">
                 <img src="images/puppies/olgie-18.jpg" alt="pied fawn male">
+                <img src="images/puppies/summr-2.jpg" alt="pied fawn male">
                 <img src="images/puppies/olgie-23.jpg" alt="pied fawn male">
                 <!-- <div class="sold">SOLD</div>
                 <h3>SOLD, Dallas</h3> -->
@@ -89,9 +89,19 @@
             </div>
 
             <div class="card puppy">
+                <h1>black fluffy-carrier, girl</h1>
+                <img src="images/puppies/summr.jpg" alt="black female frenchie puppy">
+                <img src="images/puppies/summr-3.jpg" alt="black female frenchie puppy">
+                <img src="images/puppies/summr-4.jpg" alt="black female frenchie puppy">
+                <!-- <div class="sold">SOLD</div>
+                <h3>SOLD, Dallas</h3> -->
+            </div>
+
+            <div class="card puppy">
                 <h1>pied sable, girl, runt of litter</h1>
                 <img src="images/puppies/olgie-19.jpg" alt="pied sable female">
                 <img src="images/puppies/olgie-20.jpg" alt="pied sable female">
+                <img src="images/puppies/summr-1.jpg" alt="pied sable female">
                 <!-- <div class="sold">SOLD</div>
                 <h3>SOLD, Dallas</h3> -->
             </div>
