--- a/puppies.html
+++ b/puppies.html
@@ -40,7 +40,7 @@
     <section class="features  bg-primary py-3">
         <div class="container p-5">
             <h1 class="xl">Puppies Available NOW:</h1>
-            <p class="lead">  July 21 - We currently have both boy and girl puppies available. </p>
+            <p class="lead">  July 28 - We currently have both boy and girl puppies available. </p>
             <!-- <iframe class="video" src="https://www.youtube.com/embed/_27PZblTQaA" frameborder="0"
                 allow="accelerometer; autoplay; encrypted-media; gyroscope;" allowfullscreen></iframe>
             <div> -->
@@ -49,7 +49,7 @@
         </div>
         <div class="container grid">
             <div class="card puppy">
-                <h1>black girl - $5000
+                <h1>black girl 
                 <img src="images/puppies/airport.jpeg" alt="">
                 <img src="images/puppies/airport2.jpeg" alt="">
                 <div class="sold">SOLD</div>
@@ -57,21 +57,21 @@
             </div>
             
             <div class="card puppy">
-                <h1>black and tan boy - $5000
+                <h1>black and tan boy
                 <img src="images/puppies/olgie-16.jpg" alt="">
                 <div class="sold">SOLD</div>
                 <h3>SOLD, Dallas, TX - repeat client</h3>
             </div>
 
             <div class="card puppy">
-                <h1>pied sable, girl, runt of litter - $5000</h1>
+                <h1>pied sable, girl, runt of litter </h1>
                 <img src="images/puppies/olgie-20.jpg" alt="pied sable female">
                 <div class="sold">SOLD</div>
                 <h3>SOLD, Granbury,TX  </h3>
             </div>
 
             <div class="card puppy">
-                <h1>chocolate, fluffy-carrier boy - $4000</h1>
+                <h1>chocolate, fluffy-carrier boy </h1>
                 <img src="images/puppies/olgie-26.jpg" alt="choco-carrier male">
                 <img src="images/puppies/july23-4.jpg" alt="">
                 <img src="images/puppies/july23-5.jpg" alt="">
@@ -80,7 +80,7 @@
             </div>
 
             <div class="card puppy">
-                <h1>pied fawn, boy $4500</h1>
+                <h1>pied fawn, boy </h1>
                 <img src="images/puppies/july23-2.jpg" alt="">
                 <img src="images/puppies/olgie-18.jpg" alt="pied fawn male">
                 <img src="images/puppies/summr-2.jpg" alt="pied fawn male">
@@ -89,7 +89,7 @@
             </div>
 
             <div class="card puppy">
-                <h1>pied black and tan, girl - a little baby Yoda! $5500</h1>
+                <h1>pied black and tan, girl - a little baby Yoda! </h1>
                 <img src="images/puppies/july23-1.jpg" alt="">
                 <img src="images/puppies/july23-3.jpg" alt="">
                 <img src="images/puppies/july23-6.jpg" alt="">
@@ -98,7 +98,7 @@
             </div>
 
             <div class="card puppy">
-                <h1>black fluffy-carrier, girl - $4500</h1>
+                <h1>black fluffy-carrier, girl </h1>
                 <img src="images/puppies/summr.jpg" alt="black female frenchie puppy">
                 <img src="images/puppies/summr-3.jpg" alt="black female frenchie puppy">
                 <img src="images/puppies/summr-4.jpg" alt="black female frenchie puppy">
