--- a/stud.html
+++ b/stud.html
@@ -95,7 +95,7 @@
 
                 </div>
             </div>
-            <div class="container grid">
+            <!-- <div class="container grid">
 
                 <div class="card bg-light p-3">
 
@@ -126,7 +126,7 @@
                     <img src="images/Stud/ferr-3.jpg" alt="chocolate fluffy french bulldog">
 
                 </div>
-            </div>
+            </div> -->
             <div class="container grid">
 
                 <div class="card bg-light p-3">
