--- a/puppies.html
+++ b/puppies.html
@@ -40,7 +40,7 @@
     <section class="features  bg-primary py-3">
         <div class="container p-5">
             <h1 class="xl">Puppies Available NOW:</h1>
-            <p class="lead">  July 28 - We currently have both boy and girl puppies available. </p>
+            <p class="lead">  August 6th - We currently have one boy and one girl available. </p>
             <!-- <iframe class="video" src="https://www.youtube.com/embed/_27PZblTQaA" frameborder="0"
                 allow="accelerometer; autoplay; encrypted-media; gyroscope;" allowfullscreen></iframe>
             <div> -->
@@ -48,6 +48,25 @@
             </div>
         </div>
         <div class="container grid">
+
+            <div class="card puppy">
+                <h1>pied fawn, boy </h1>
+                <img src="images/puppies/july23-2.jpg" alt="">
+                <img src="images/puppies/olgie-18.jpg" alt="pied fawn male">
+                <img src="images/puppies/summr-2.jpg" alt="pied fawn male">
+                <!-- <div class="sold">SOLD</div>
+                <h3>SOLD, Dallas</h3> -->
+            </div>
+
+            <div class="card puppy">
+                <h1>pied black and tan, girl - a little baby Yoda! </h1>
+                <img src="images/puppies/july23-1.jpg" alt="">
+                <img src="images/puppies/july23-3.jpg" alt="">
+                <img src="images/puppies/july23-6.jpg" alt="">
+                <!-- <div class="sold">SOLD</div>
+                <h3>SOLD, Dallas</h3> -->
+            </div>
+
             <div class="card puppy">
                 <h1>black girl 
                 <img src="images/puppies/airport.jpeg" alt="">
@@ -73,37 +92,17 @@
             <div class="card puppy">
                 <h1>chocolate, fluffy-carrier boy </h1>
                 <img src="images/puppies/olgie-26.jpg" alt="choco-carrier male">
-                <img src="images/puppies/july23-4.jpg" alt="">
-                <img src="images/puppies/july23-5.jpg" alt="">
-                <!-- <div class="sold">SOLD</div>
-                <h3>SOLD, Philadelphia, PA</h3> -->
+                <div class="sold">SOLD</div>
+                <h3>SOLD, Burleson, TX</h3>
             </div>
 
-            <div class="card puppy">
-                <h1>pied fawn, boy </h1>
-                <img src="images/puppies/july23-2.jpg" alt="">
-                <img src="images/puppies/olgie-18.jpg" alt="pied fawn male">
-                <img src="images/puppies/summr-2.jpg" alt="pied fawn male">
-                <!-- <div class="sold">SOLD</div>
-                <h3>SOLD, Dallas</h3> -->
-            </div>
-
-            <div class="card puppy">
-                <h1>pied black and tan, girl - a little baby Yoda! </h1>
-                <img src="images/puppies/july23-1.jpg" alt="">
-                <img src="images/puppies/july23-3.jpg" alt="">
-                <img src="images/puppies/july23-6.jpg" alt="">
-                <!-- <div class="sold">SOLD</div>
-                <h3>SOLD, Dallas</h3> -->
-            </div>
+            
 
             <div class="card puppy">
                 <h1>black fluffy-carrier, girl </h1>
                 <img src="images/puppies/summr.jpg" alt="black female frenchie puppy">
-                <img src="images/puppies/summr-3.jpg" alt="black female frenchie puppy">
-                <img src="images/puppies/summr-4.jpg" alt="black female frenchie puppy">
-                <!-- <div class="sold">SOLD</div>
-                <h3>SOLD, Dallas</h3> -->
+                <div class="sold">SOLD</div>
+                <h3>SOLD, Dallas, TX</h3>
             </div>
 
            
