--- a/puppies.html
+++ b/puppies.html
@@ -40,7 +40,7 @@
     <section class="features  bg-primary py-3">
         <div class="container p-5">
             <h1 class="xl">Puppies Available NOW:</h1>
-            <p class="lead">  August 6th - We currently have one boy and one girl available. </p>
+            <p class="lead">  August 30th - We currently have one boy available. </p>
             <!-- <iframe class="video" src="https://www.youtube.com/embed/_27PZblTQaA" frameborder="0"
                 allow="accelerometer; autoplay; encrypted-media; gyroscope;" allowfullscreen></iframe>
             <div> -->
@@ -63,8 +63,8 @@
                 <img src="images/puppies/july23-1.jpg" alt="">
                 <img src="images/puppies/july23-3.jpg" alt="">
                 <img src="images/puppies/july23-6.jpg" alt="">
-                <!-- <div class="sold">SOLD</div>
-                <h3>SOLD, Dallas</h3> -->
+                <div class="sold">SOLD</div>
+                <h3>SOLD, Atlanta, GA</h3>
             </div>
 
             <div class="card puppy">
