--- a/puppies.html
+++ b/puppies.html
@@ -101,7 +101,7 @@
             </div>
 
             <div class="card puppy">
-                <h1>Blue and tan, girl  </h1>
+                <h1>blue and tan, girl  </h1>
                 <img src="images/puppies/sept/sept-09.jpg" alt="french bulldog puppy">
                 <img src="images/puppies/sept/sept-10.jpg" alt="french bulldog puppy">
                 <!-- <div class="sold">SOLD</div>
@@ -118,7 +118,39 @@
                 <h3>SOLD, Dallas, TX</h3> -->
             </div>
 
-           
+           <div class="card puppy">
+                <h1>red fawn, micro, girl </h1>
+                <img src="images/puppies/sept/sept-20.jpg" alt="blue frenchie puppy">
+                <img src="images/puppies/sept/sept-21.jpg" alt="blue frenchie puppy">
+                <!-- <div class="sold">SOLD</div>
+                <h3>SOLD, Dallas, TX</h3> -->
+            </div>
+
+            <div class="card puppy">
+                <h1>fawn with dark chocolate points, girl </h1>
+                <img src="images/puppies/sept/sept-22.jpg" alt="blue frenchie puppy">
+                <img src="images/puppies/sept/sept-23.jpg" alt="blue frenchie puppy">
+                <!-- <div class="sold">SOLD</div>
+                <h3>SOLD, Dallas, TX</h3> -->
+            </div>
+
+            <div class="card puppy">
+                <h1>fawn with chocolate points, boy </h1>
+                <img src="images/puppies/sept/sept-24.jpg" alt="blue frenchie puppy">
+                <img src="images/puppies/sept/sept-25.jpg" alt="blue frenchie puppy">
+                <!-- <div class="sold">SOLD</div>
+                <h3>SOLD, Dallas, TX</h3> -->
+            </div>
+
+            <div class="card puppy">
+                <h1>fawn with chocolate points, girl </h1>
+                <img src="images/puppies/sept/sept-26.jpg" alt="blue frenchie puppy">
+                <img src="images/puppies/sept/sept-27.jpg" alt="blue frenchie puppy">
+                <!-- <div class="sold">SOLD</div>
+                <h3>SOLD, Dallas, TX</h3> -->
+            </div>
+
+
             <!-- <div class="card puppy">
                 <h1>Two fawn boys, $00 a piece</h1>
                 
