--- a/puppies.html
+++ b/puppies.html
@@ -40,7 +40,7 @@
     <section class="features  bg-primary py-3">
         <div class="container p-5">
             <h1 class="xl">Puppies Available NOW:</h1>
-            <p class="lead">  Sept 22nd - This is so exciting. We have just had some of our best litters yet! We have boys and girls avaiable. We usually wait to post photos but the little newborn lilac and tans are sooo adorable.</p>
+            <p class="lead">  October 2nd, 2023 - This is so exciting. We have just had some of our best litters yet! We have boys and girls avaiable. We usually wait to post photos but the little newborn lilac and tans are sooo adorable.</p>
             <!-- <iframe class="video" src="https://www.youtube.com/embed/_27PZblTQaA" frameborder="0"
                 allow="accelerometer; autoplay; encrypted-media; gyroscope;" allowfullscreen></iframe>
             <div> -->
@@ -67,16 +67,17 @@
             </div>
 
             <div class="card puppy">
-                <h1>black chocolate, girl, micro</h1>
+                <h1>two black chocolates girls, micros</h1>
                 <img src="images/puppies/sept/sept-18.jpg" alt="black micro french bulldog puppy">
-                <img src="images/puppies/sept/sept-19.jpg" alt="black micro french bulldog puppy">
+                <img src="images/puppies/sept/sept-30.jpg" alt="black micro french bulldog puppy">
+                <img src="images/puppies/sept/sept-31.jpg" alt="black micro french bulldog puppy">
                 <!-- <div class="sold">SOLD</div>
                 <h3>SOLD, Dallas</h3> -->
             </div>
 
             <div class="card puppy">
                 <h1>blue, light brindle, girl</h1>
-                <img src="images/puppies/sept/sept-06.jpg" alt="blue french bulldog puppy">
+                <img src="images/puppies/sept/sept-33.jpg" alt="blue french bulldog puppy">
                 <img src="images/puppies/sept/sept-07.jpg" alt="blue french bulldog puppy">
                 <img src="images/puppies/sept/sept-08.jpg" alt="blue french bulldog puppy">
                 <!-- <div class="sold">SOLD</div>
@@ -91,32 +92,15 @@
                 <h3>SOLD, Houston, TX </h3> -->
             </div>
             
-            <div class="card puppy">
-                <h1>lilac-blue fawn, boy</h1>
-                <img src="images/puppies/sept/sept-11.jpg" alt="french bulldog">
-                <img src="images/puppies/sept/sept-12.jpg" alt="french bulldogpuppy">
-                <img src="images/puppies/sept/sept-13.jpg" alt="french bulldog ">
-                <!-- <div class="sold">SOLD</div>
-                <h3>SOLD, Dallas, TX - repeat client</h3> -->
-            </div>
 
             <div class="card puppy">
-                <h1>blue and tan, girl  </h1>
-                <img src="images/puppies/sept/sept-09.jpg" alt="french bulldog puppy">
-                <img src="images/puppies/sept/sept-10.jpg" alt="french bulldog puppy">
+                <h1>two blue and tan girls </h1>
+                <img src="images/puppies/sept/sept-34.jpg" alt="french bulldog puppy">
+                <img src="images/puppies/sept/sept-35.jpg" alt="french bulldog puppy">
                 <!-- <div class="sold">SOLD</div>
                 <h3>SOLD, Burleson, TX</h3> -->
             </div>
 
-            
-
-            <div class="card puppy">
-                <h1>blue, boy </h1>
-                <img src="images/puppies/sept/sept-14.jpg" alt="blue frenchie puppy">
-                <img src="images/puppies/sept/sept-15.jpg" alt="blue frenchie puppy">
-                <!-- <div class="sold">SOLD</div>
-                <h3>SOLD, Dallas, TX</h3> -->
-            </div>
 
            <div class="card puppy">
                 <h1>red fawn, micro, girl </h1>
